--- a/vir3s.html
+++ b/vir3s.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Fake Virus Prank</title>
+<title>grow a garden free candy blossom🥳</title>
 <style>
   body {
     margin: 0;
